--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
       <a class="restart-button">New Game</a>
     </div>
-
+    <div class="difficulty-selector">
+      <label for="difficulty-selector">Choose difficulty:</label>
+      <select id="difficulty-selector">
+        <option value="easy">Easy</option>
+        <option value="medium" selected>Medium</option>
+        <option value="hard">Hard</option>
+        <option value="very-hard">Very Hard</option>
+        <option value="extreme">Extreme</option>
+      </select>
+    </div>
     <div class="game-container">
       <div class="game-message">
         <p></p>
