--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
       <a class="restart-button">New Game</a>
     </div>
+    
+    <div id="timer-container" class="center">
+      <p id="timer">Timer: 0</p>
+    </div>
 
     <div class="game-container">
       <div class="game-message">
